[fix] SecurityConfig 수정